--- a/index.html
+++ b/index.html
@@ -2,9 +2,19 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="stylesheet.css" media="screen"/>
 </head>
 <body>
+
+    <div class = "container">
+            <div class = "row">
+                    <div class = "col-lg-4"><h3>09 Mahalaxmi <br>Nepal</h3> </div>
+                    <div class = "col-lg-4"><h3>469406955940 <br>Phone</h3> </div>
+                    <div class = "col-lg-4"><h3>abc.com <br>Mail</h3></div>
+            </div>
+    </div>
+
 
 <div class="topnav">
   <a class="active" href="#home">Home</a>
@@ -12,7 +22,6 @@
   <a href="#contact">Contact</a>
   <a href="#about">About</a>
 </div>
-
 
 </body>
 </html>
